<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>com.spotify</groupId>
    <artifactId>foss-root</artifactId>
    <version>18</version>
  </parent>

  <groupId>com.spotify.i18n</groupId>
  <artifactId>locales-oss-parent</artifactId>
  <version>6.2.3-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>locales-oss-parent</name>

  <modules>
    <module>examples/locales-affinity-examples</module>
    <module>examples/locales-http-examples</module>
    <module>locales-common</module>
    <module>locales-utils</module>
  </modules>

  <url>https://github.com/spotify/java-locales</url>
  <description>Open-source library that standardizes the use of locales in java software
    components
  </description>

  <properties>
    <!-- Required Java 11 -->
    <maven.compiler.release>11</maven.compiler.release>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>

    <!-- Dependency management -->
    <apache.httpclient.version>4.5.14</apache.httpclient.version>
    <apache.httpcore.version>4.4.16</apache.httpcore.version>
    <google.auto-value.version>1.11.0</google.auto-value.version>
    <google.guava.version>33.3.1-jre</google.guava.version>
    <icu4j.version>78.3</icu4j.version>
    <java-hamcrest.version>2.0.0.0</java-hamcrest.version>
    <junit.version>5.11.3</junit.version>
    <mockito.version>5.12.0</mockito.version>
    <spotbugs.version>4.9.3</spotbugs.version>
    <spotify.hamcrest.version>1.3.2</spotify.hamcrest.version>
  </properties>

  <licenses>
    <license>
      <name>Apache License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <developers>
    <developer>
      <id>efjosne</id>
      <name>Eric Fjøsne</name>
      <email>efjosne@spotify.com</email>
      <organization>Spotify</organization>
      <organizationUrl>http://www.spotify.com</organizationUrl>
      <roles>
        <role>owner</role>
        <role>developer</role>
      </roles>
      <timezone>+1</timezone>
    </developer>
  </developers>

  <scm>
    <connection>scm:git:https@github.com:spotify/java-locales.git</connection>
    <developerConnection>scm:git:git@github.com:spotify/java-locales.git</developerConnection>
    <tag>v6.2.1</tag>
    <url>http://github.com/spotify/java-locales</url>
  </scm>

  <dependencyManagement>
    <dependencies>
      <!-- Internal modules -->
      <dependency>
        <groupId>com.spotify.i18n</groupId>
        <artifactId>locales-common</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.spotify.i18n</groupId>
        <artifactId>locales-utils</artifactId>
        <version>${project.version}</version>
      </dependency>

      <!-- ICU4J -->
      <dependency>
        <groupId>com.ibm.icu</groupId>
        <artifactId>icu4j</artifactId>
        <version>${icu4j.version}</version>
      </dependency>

      <!-- Google dependencies -->
      <dependency>
        <groupId>com.google.auto.value</groupId>
        <artifactId>auto-value-annotations</artifactId>
        <version>${google.auto-value.version}</version>
      </dependency>
      <dependency>
        <groupId>com.google.guava</groupId>
        <artifactId>guava</artifactId>
        <version>${google.guava.version}</version>
      </dependency>
      <dependency>
        <groupId>com.github.spotbugs</groupId>
        <artifactId>spotbugs-annotations</artifactId>
        <version>${spotbugs.version}</version>
      </dependency>

      <!-- Apache HTTP Components (for http examples module only) -->
      <dependency>
        <groupId>org.apache.httpcomponents</groupId>
        <artifactId>httpclient</artifactId>
        <version>${apache.httpclient.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.httpcomponents</groupId>
        <artifactId>httpcore</artifactId>
        <version>${apache.httpcore.version}</version>
      </dependency>

      <!-- Test scope -->
      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>${junit.version}</version>
        <scope>import</scope>
        <type>pom</type>
      </dependency>
      <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-bom</artifactId>
        <version>${mockito.version}</version>
        <scope>import</scope>
        <type>pom</type>
      </dependency>
      <dependency>
        <groupId>org.hamcrest</groupId>
        <artifactId>java-hamcrest</artifactId>
        <version>${java-hamcrest.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>com.spotify</groupId>
        <artifactId>hamcrest-pojo</artifactId>
        <version>${spotify.hamcrest.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>com.spotify</groupId>
        <artifactId>hamcrest-future</artifactId>
        <version>${spotify.hamcrest.version}</version>
        <scope>test</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <annotationProcessorPaths combine.children="append">
            <annotationProcessorPath>
              <groupId>com.google.auto.value</groupId>
              <artifactId>auto-value</artifactId>
              <version>${google.auto-value.version}</version>
            </annotationProcessorPath>
          </annotationProcessorPaths>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <executions>
          <execution>
            <id>analyze</id>
            <goals>
              <goal>analyze-only</goal>
            </goals>
            <configuration>
              <failOnWarning>true</failOnWarning>
              <ignoreNonCompile>true</ignoreNonCompile>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
      </plugin>
    </plugins>
  </build>

  <!-- Fail to build if not properly formatted.
       Running mvn compile locally will format -->
  <profiles>
    <profile>
      <id>tingle</id>
      <build>
        <plugins>
          <plugin>
            <groupId>com.spotify.fmt</groupId>
            <artifactId>fmt-maven-plugin</artifactId>
            <executions>
              <execution>
                <goals>
                  <goal>check</goal>
                </goals>
              </execution>
            </executions>
            <version>2.22.1</version>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>default</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>com.spotify.fmt</groupId>
            <artifactId>fmt-maven-plugin</artifactId>
            <executions>
              <execution>
                <goals>
                  <goal>format</goal>
                </goals>
              </execution>
            </executions>
            <version>2.22.1</version>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
